# image_name_parser

./: .gitignore  README.md  image.py  pyproject.toml  test_image.py  tox.ini
.github/workflows/: test.yaml
src/image_name_parser/: media_types.py
src/my_image_utils/: __init__.py  media_types.py
tests/: test_image.py  test_image_reference.py
