[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "my_image_utils"
description = "Utilities working with container image."
readme = "README.md"
license = {file = "LICENSE"}
version = "0.0"
authors = [
    {name = "Chenxiong Qi", email = "qcxhome@gmail.com"}
]
keywords = ["container", "image"]
requires-python = ">= 3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/image_name_parser"
Documentation = "https://github.com/image_name_parser"
Repository = "https://github.com/image_name_parser"
Issues = "https://github.com/image_name_parser/issues"

[tool.setuptools]
platforms = ["any"]

[tool.pytest.ini_options]
pythonpath = ["src"]
